Housekeeping/Bugfixes
- Updated openapi.yaml, docker-compose

- Added global settings menu (FFMpeg presets, auto-scanning, Encoding method)

- Added other options, db migration

- Fixed EPG historical data bug
